Fix hero images spilling out of their frame in carousel
See #34

--- a/Files/src/css/component/hero-avatar.component.scss
+++ b/Files/src/css/component/hero-avatar.component.scss
@@ -22,9 +22,9 @@
 
 .hero-avatar .avatar .portrait {
 	position: absolute;
-	width: 76%;
+	width: 74%;
     top: 14%;
-    left: 11%;
+    left: 13%;
 	-webkit-clip-path: polygon(0 100%,0 40%,20% 10%,30% 3%,50% 0,70% 3%,80% 10%,100% 40%,100% 100%);
 	z-index: -1;
 }
